docs-archive/apache-airflow-providers-google/22.5.0/_sources/_api/airflow/providers/google/cloud/sensors/bigquery/index.rst.txt
airflow.providers.google.cloud.sensors.bigquery
===============================================

.. py:module:: airflow.providers.google.cloud.sensors.bigquery

.. autoapi-nested-parse::

   This module contains Google BigQuery sensors.



Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.sensors.bigquery.BigQueryTableExistenceSensor
   airflow.providers.google.cloud.sensors.bigquery.BigQueryRoutineExistenceSensor
   airflow.providers.google.cloud.sensors.bigquery.BigQueryTablePartitionExistenceSensor
   airflow.providers.google.cloud.sensors.bigquery.BigQueryStreamingBufferEmptySensor


Module Contents
---------------

.. py:class:: BigQueryTableExistenceSensor(*, project_id, dataset_id, table_id, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseSensorOperator`


   Checks for the existence of a table in Google Bigquery.

   :param project_id: The Google cloud project in which to look for the table.
       The connection supplied to the hook must provide
       access to the specified project.
   :param dataset_id: The name of the dataset in which to look for the table.
       storage bucket.
   :param table_id: The name of the table to check the existence of.
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('project_id', 'dataset_id', 'table_id', 'impersonation_chain')



   .. py:attribute:: ui_color
      :value: '#f0eee4'



   .. py:attribute:: project_id


   .. py:attribute:: dataset_id


   .. py:attribute:: table_id


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: deferrable


   .. py:method:: poke(context)

      Override when deriving this class.



   .. py:method:: execute(context)

      Airflow runs this method on the worker and defers using the trigger.



   .. py:method:: execute_complete(context, event = None)

      Act as a callback for when the trigger fires - returns immediately.

      Relies on trigger to throw an exception, otherwise it assumes execution was successful.



.. py:class:: BigQueryRoutineExistenceSensor(*, project_id, dataset_id, routine_id, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseSensorOperator`


   Checks for the existence of a routine (UDF, procedure, or TVF) in a BigQuery dataset.

   :param project_id: The Google Cloud project that owns the dataset.
   :param dataset_id: The dataset that owns the routine.
   :param routine_id: The identifier of the routine to check.
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('project_id', 'dataset_id', 'routine_id', 'impersonation_chain')



   .. py:attribute:: ui_color
      :value: '#f0eee4'



   .. py:attribute:: project_id


   .. py:attribute:: dataset_id


   .. py:attribute:: routine_id


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: poke(context)

      Override when deriving this class.



.. py:class:: BigQueryTablePartitionExistenceSensor(*, project_id, dataset_id, table_id, partition_id, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseSensorOperator`


   Checks for the existence of a partition within a table in Google Bigquery.

   :param project_id: The Google cloud project in which to look for the table.
       The connection supplied to the hook must provide
       access to the specified project.
   :param dataset_id: The name of the dataset in which to look for the table.
       storage bucket.
   :param table_id: The name of the table to check the existence of.
   :param partition_id: The name of the partition to check the existence of.
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('project_id', 'dataset_id', 'table_id', 'partition_id', 'impersonation_chain')



   .. py:attribute:: ui_color
      :value: '#f0eee4'



   .. py:attribute:: project_id


   .. py:attribute:: dataset_id


   .. py:attribute:: table_id


   .. py:attribute:: partition_id


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: deferrable


   .. py:method:: poke(context)

      Override when deriving this class.



   .. py:method:: execute(context)

      Airflow runs this method on the worker and defers using the triggers if deferrable is True.



   .. py:method:: execute_complete(context, event = None)

      Act as a callback for when the trigger fires - returns immediately.

      Relies on trigger to throw an exception, otherwise it assumes execution was successful.



.. py:class:: BigQueryStreamingBufferEmptySensor(*, project_id, dataset_id, table_id, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseSensorOperator`


   Wait for the streaming buffer of a BigQuery table to be empty.

   BigQuery DML statements (UPDATE, DELETE, MERGE) cannot run against rows that
   are still in the streaming buffer; the buffer is flushed within ~90 minutes.
   Use this sensor between a streaming insert and a DML step to avoid
   ``UPDATE/MERGE/DELETE statement over table ... would affect rows in the
   streaming buffer`` errors.

   .. warning::
       The sensor reads ``table.streaming_buffer`` from BigQuery's table
       metadata, which is eventually consistent. For a short window right
       after a streaming insert the buffer metadata is still absent, so the
       sensor may report the buffer empty before it actually is. Known
       limitation tracked at
       https://github.com/apache/airflow/issues/66963

   :param project_id: Google Cloud project containing the table.
   :param dataset_id: Dataset of the table to monitor.
   :param table_id: Table to monitor.
   :param gcp_conn_id: Airflow connection ID for GCP.
   :param impersonation_chain: Optional service account to impersonate, or a
       chained list of accounts. See the Google provider docs for details.
   :param deferrable: Run in deferrable mode using
       :class:`BigQueryStreamingBufferEmptyTrigger`.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('project_id', 'dataset_id', 'table_id', 'impersonation_chain')



   .. py:attribute:: ui_color
      :value: '#f0eee4'



   .. py:attribute:: project_id


   .. py:attribute:: dataset_id


   .. py:attribute:: table_id


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: deferrable


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event = None)


   .. py:method:: poke(context)

      Override when deriving this class.



